--- a/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
+++ b/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bootstrap.311.SimpleBlog</RootNamespace>
-    <AssemblyName>Bootstrap.311.SimpleBlog</AssemblyName>
+    <RootNamespace>Bootstrap.SimpleBlog</RootNamespace>
+    <AssemblyName>Bootstrap.SimpleBlog</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <FileUpgradeFlags>
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Styles\Site.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
     <Content Include="Styles\Web.config" />
@@ -85,6 +86,7 @@
       <Name>Orchard.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Views\Content.cshtml" />
     <Content Include="Views\Layout.cshtml" />
