Add a ListShapeProvider and hit its breakpoint.

--- a/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
+++ b/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
@@ -86,7 +86,9 @@
       <Name>Orchard.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Compile Include="ListShapeProvider.cs" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Content.cshtml" />
     <Content Include="Views\Layout.cshtml" />
