--- a/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
+++ b/src/Orchard.Web/Themes/Bootstrap.SimpleBlog/Bootstrap.SimpleBlog.csproj
@@ -92,8 +92,7 @@
   <ItemGroup>
     <Content Include="Views\Content.cshtml" />
     <Content Include="Views\Layout.cshtml" />
-    <Content Include="Views\List.cshtml" />
-    <Content Include="Views\Parts.Blogs.BlogPost.List.cshtml" />
+    <Content Include="Views\List-Bootstrap-ListGroup.cshtml" />
     <Content Include="Views\Parts.TagCloud.cshtml" />
   </ItemGroup>
   <PropertyGroup>
