--- a/src/Orchard.Web/Themes/Contoso/Contoso.csproj
+++ b/src/Orchard.Web/Themes/Contoso/Contoso.csproj
@@ -71,6 +71,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\bkg.jpg" />
     <Content Include="Content\Images\comment-arrow.png" />
     <Content Include="Content\Images\content-bkg.png" />
@@ -92,8 +94,16 @@
     <Content Include="Content\Images\nav-arrow-left.png" />
     <Content Include="Content\Images\nav-arrow-right.png" />
     <Content Include="Content\Images\sub-header.png" />
+    <Content Include="Content\Site.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Instructions.txt" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\easySlider.js" />
+    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\jquery-1.10.2.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Styles\Site.css" />
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\Web.config" />
@@ -116,8 +126,16 @@
     <Compile Include="Code\ContentShapeProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="packages.config" />
     <None Include="Placement.info" />
     <Content Include="web.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\_ListGroup.cshtml" />
+    <Content Include="Scripts\jquery-1.10.2.min.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
