--- a/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Bootstrap_3_1_1_SimpleBlog.csproj
+++ b/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Bootstrap_3_1_1_SimpleBlog.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Styles\APA-Style.css" />
     <Content Include="Styles\Site.css" />
     <Content Include="Web.config" />
     <Content Include="Scripts\Web.config" />
