Save and close.

--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Bootstrap_3_1_1_KongwaHill.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_KongwaHill/Bootstrap_3_1_1_KongwaHill.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Readme\Todo.txt" />
     <Content Include="Scripts\IE-10.js" />
     <Content Include="Styles\IE-10.css" />
     <Content Include="Styles\Site.css" />
