--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Web.config
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Bootstrap_3_1_1_SimpleBlog/Web.config
@@ -38,4 +38,15 @@
     </compilation>
   </system.web>
 
+  <system.webServer>
+    <staticContent>
+      <remove fileExtension=".svg" />
+      <remove fileExtension=".eot" />
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".svg" mimeType="image/svg+xml"  />
+      <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
+    </staticContent>
+  </system.webServer>
+
 </configuration>
