--- a/Orchard.Source.1.8/src/packages/repositories.config
+++ b/Orchard.Source.1.8/src/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Orchard.Web\Themes\Bootstrap_3_1_1_SimpleBlog\packages.config" />
+  <repository path="..\Orchard.Web\Themes\Contoso\packages.config" />
 </repositories>
