--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
@@ -61,8 +61,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\BootstrapScaffolding.css" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Site.css" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Theme.css" />
+    <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\TheThemeMachine.css" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Web.config" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Scripts\Web.config" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Web.config" />
@@ -193,6 +195,7 @@
     <Content Include="TheAdmin\Views\ErrorPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\BootstrapScaffolding.less" />
     <None Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\Site.less" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Content\Web.config" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Placement.info" />
@@ -201,6 +204,7 @@
     <Content Include="Bootstrap_3_1_1_GardenFaire\Web.config" />
     <Content Include="Bootstrap_3_1_1_GardenFaire\Styles\Less\Theme.less" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\Theme.less" />
+    <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\TheThemeMachine.less" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bootstrap_3_1_1_BaseTheme\Views\Layout.cshtml" />
