--- a/Orchard.Source.1.8/src/Orchard.Web/Modules/Orchard.Setup/Orchard.Setup.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Modules/Orchard.Setup/Orchard.Setup.csproj
@@ -94,6 +94,7 @@
     <Content Include="Recipes\core.recipe.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Recipes\theme-machine-designer.recipe.xml" />
     <Content Include="Scripts\setup.js" />
     <Content Include="Views\Setup\Index.cshtml" />
   </ItemGroup>
