--- a/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
+++ b/Orchard.Source.1.8/src/Orchard.Web/Themes/Themes.csproj
@@ -61,6 +61,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="TheThemeMachineDesigner\Styles\Site.css" />
+    <Content Include="TheThemeMachineDesigner\Styles\TheThemeMachine-Original.css" />
+    <Content Include="TheThemeMachineDesigner\Web.config" />
+    <Content Include="TheThemeMachineDesigner\Scripts\Web.config" />
+    <Content Include="TheThemeMachineDesigner\Styles\Web.config" />
+    <Content Include="TheThemeMachineDesigner\Content\Web.config" />
+    <Content Include="TheThemeMachineDesigner\Theme.txt" />
+    <Content Include="TheThemeMachineDesigner\Theme.png" />
+    <Content Include="TheThemeMachineDesigner\Placement.info" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\BootstrapScaffolding.css" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Site.css" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Theme.css" />
@@ -205,12 +216,15 @@
     <Content Include="Bootstrap_3_1_1_GardenFaire\Styles\Less\Theme.less" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\Theme.less" />
     <Content Include="Bootstrap_3_1_1_BaseTheme\Styles\Less\TheThemeMachine.less" />
+    <Content Include="TheThemeMachineDesigner\Styles\Less\Site.less" />
+    <Content Include="TheThemeMachineDesigner\Styles\Less\TheThemeMachine-Original.less" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bootstrap_3_1_1_BaseTheme\Views\Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Bootstrap_3_1_1_GardenFaire\Views\" />
+    <Folder Include="TheThemeMachineDesigner\Views\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
